# elastic_semantic_search

./: .gitignore  README.md  main.py  pyproject.toml
app/: es.py  llm.py  prompts.py  schema.py  telemetry.py  validators.py
data/: data.csv
diagrams/: Inference Sequence Diagram.mmd  architecture.drawio  data ingestion  Sequence Diagram.mmd  smart semantic search.mmd
es/: create_index.http  mapping.json  mapping_v2.json  pipeline_loc_split.json  pipeline_loc_split_v2.json
ingest/: bulk_load.py
prompts/: sys_prompt_v1.txt  sys_prompt_v2.txt
scripts/: __init__.py  create_index.py  insert_data.py  search_examples.py
